samples/_failures_safe/1761708513_e8a056_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d542c54e.c:188:1: error: expected ‘{’ at end of input
  188 | void freeGraph(struct
      | ^~~~
